# nc-prompt-tools

./: .continuerules  .gitignore  COPYING  README.md  pyproject.toml
nc_prompt_tools/: __init__.py  prompt_lint.py
tests/: test_prompt_lint.py
