[project]
name = "nc-prompt-tools"
version = "0.1.0"
description = "A collection of tools and utilities for supporting users of Novelcrafter."
authors = [
    {name = "Payton McIntosh"}
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
prompt_lint = "nc_prompt_tools.prompt_lint:main"
